@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-30T08:21:03Z",
+  "timestamp" : "2022-03-31T01:14:20Z",
   "count_outdated" : 50,
   "uniques_outdated" : 40,
-  "count" : 75,
-  "uniques" : 54,
+  "count" : 83,
+  "uniques" : 57,
   "clones" : [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -21,10 +21,10 @@
     },
     {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
+      "uniques": 4,
+      "uniques_minmax": [ 0, 4 ]
     }
   ]
 }
