@@ -1,6 +1,6 @@
 {
-  "count": 25,
-  "uniques": 11,
+  "count": 33,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 9,
+      "uniques": 4
     }
   ]
 }
